# project_django

./: .env.sample  .gitignore  README.md  config.ini.sample  pyproject.toml  requirements.txt
apps/blog/: admin.py  forms.py  models.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py  0002_article_owner.py
apps/blog/static/blog/css/: articles.css
apps/blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
apps/catalog/: admin.py  forms.py  models.py  urls.py  views.py
apps/catalog/management/commands/: fill_db.py
apps/catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0002_version.py  0003_product_owner.py  0004_alter_product_options_product_is_published.py
apps/catalog/templates/catalog/: base.html  catalog.html  category_detail.html  category_list.html  contacts.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
apps/catalog/templatetags/: my_tags.py
apps/users/: admin.py  models.py  services.py  urls.py  views.py
apps/users/management/commands/: create_su.py
apps/users/migrations/: 0001_initial.py
apps/users/templates/users/: login.html  recovery_form.html  user_form.html
catalog/: urls.py
catalog/templates/catalog/: contacts.html  index.html
config/: settings.py  urls.py
fixtures/: 001_categories_data.json  002_products_data.json  01_users_data.json  02_articles_data.json  02_products_data.json  02_users_data.json  03_articles_data.json  04_products_data.json  05_versions_data.json
(+1 files in other folders)
